<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Formulario2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formulario"
                android:gravity="center"/>
            <EditText
                android:id="@+id/etxtFNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/nombre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/etxtFPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/telefono"
                android:importantForAutofill="no"
                android:inputType="phone"/>
            <EditText
                android:id="@+id/etxtFBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/cumple"
                android:importantForAutofill="no"
                android:inputType="date"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genero"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rbtFMujer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mujer"/>
                <RadioButton
                    android:id="@+id/rbtFHombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hombre"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color"/>
                <CheckBox
                    android:id="@+id/chkbFRojo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rojo"/>
                <CheckBox
                    android:id="@+id/chkbFVerde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verde"/>
                <CheckBox
                    android:id="@+id/chkbFAmarillo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amarillo"/>
                <CheckBox
                    android:id="@+id/chkbFAzul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/azul"/>
                <Button
                    android:id="@+id/btnFMostrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/mostrar"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>