<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Datos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints, margin_constraintools">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formulario"
                android:gravity="center"/>
            <EditText
                android:id="@+id/etxtDNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/nombre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/etxtDPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/telefono"
                android:importantForAutofill="no"
                android:inputType="phone"/>
            <EditText
                android:id="@+id/etxtDEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/edad"
                android:importantForAutofill="no"
                android:inputType="number"/>
            <TextView
                android:id="@+id/tvDSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genero"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tvDColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:gravity="center"/>

            <Button
                android:id="@+id/btnDTomarFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/foto"/>
            <Button
                android:id="@+id/btnDSalir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/salir"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>